Improve Student index page table layout; expunge hash rockets.

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group">
       <%= f.label :birth_date %><br>
-      <%= f.text_field :birth_date, :type => 'date', :min => '1900-01-01', :max => Date.today %>
+      <%= f.text_field :birth_date, :type => 'date', min: '1900-01-01', max: Date.today %>
     </div>    
     <div class="form-group">
       <%= f.label :gender %><br>
