--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,7 +2,12 @@
 <div class="panel panel-primary">
   <div class="panel-heading clearfix">
     <h3 class="panel-title pull-left"><%= @student.full_name %></h3>
-    <%= link_to '<i class="fa fa-pencil"></i> Edit'.html_safe, edit_student_path(@student), :class => "btn btn-default btn-xs pull-right" %>
+    <%= link_to @student, method: :delete, class: "btn btn-danger btn-xs pull-right panel_button", data: { confirm: "Deleting things causes them to be gone and regret to set in later. Are you sure you want to do this?" } do %>
+      <i class="fa fa-trash"></i> Delete
+    <% end %>    
+    <%= link_to edit_student_path(@student), class: "btn btn-default btn-xs pull-right panel_button" do %>
+      <i class="fa fa-pencil"></i> Edit
+    <% end %>
   </div>
   <table class="table">
     <tr>
