--- a/app/views/institutes/_course_list.html.haml
+++ b/app/views/institutes/_course_list.html.haml
@@ -1,4 +1,4 @@
-%ul.list-group
+%ul.list-group.course_list
   - institute.courses.order(:name).each do |course|
     %li.list-group-item
       = course.name
